cabal-version: 1.12
name:           acsl-parser
version:        0.1.0.0
description:    Parser for ARM Specification files
homepage:       https://github.com/GaloisInc/acsl-parser
bug-reports:    https://github.com/GaloisInc/acsl-parser/issues
author:         Joe Hendrix
maintainer:     jhendrix@galois.com
copyright:      2019 Galois, Inc
license:        BSD3
--license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/GaloisInc/acsl-parser

test-suite acsl-parser-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_acsl_parser
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , data-default-class
    , text
    , xml-conduit
  default-language: Haskell2010
